--- a/views/confirmation.erb
+++ b/views/confirmation.erb
@@ -1,1 +1,6 @@
 <h2>attack confirmed</h2>
+
+<iframe src="https://giphy.com/embed/iYssqHbOcvL20" width="480" height="361"
+frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+
+<h3> <%=@player_2_name%> health: <%= @player_2_score %>
