Extract Game class

--- a/views/confirmation.erb
+++ b/views/confirmation.erb
@@ -3,4 +3,4 @@
 <iframe src="https://giphy.com/embed/iYssqHbOcvL20" width="480" height="361"
 frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
 
-<h3> <%=@player_2_name%> health: <%= @player_2_score %>
+<h3> <%=@player_2_name%> health: <%= @player_2_health %>
