--- a/views/play.erb
+++ b/views/play.erb
@@ -5,7 +5,7 @@ allowFullScreen></iframe></br></br>
 <div style="font-size: 28px">
 <%= @player_1_name %> vs <%= @player_2_name %>
 <br><br>
-<%= @player_2_name %> Health: <%= @player_health %>
+<%= @player_2_name %> Health: <%= @player_2_health %>
 
 <form action="/confirmation" method="get">
 <button type="submit" value="attack">Attack</button>
