--- a/views/confirmation.erb
+++ b/views/confirmation.erb
@@ -1,6 +1,5 @@
 <h2>attack confirmed</h2>
 
-<iframe src="https://giphy.com/embed/iYssqHbOcvL20" width="480" height="361"
-frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+<img src="https://media.giphy.com/media/iYssqHbOcvL20/giphy.gif">
 
-<h3> <%=@player_2_name%> health: <%= @player_2_health %>
+<h3> <%= $game.player2.name %> health: <%= $game.player2.health %>
