--- a/views/confirmation.erb
+++ b/views/confirmation.erb
@@ -2,4 +2,4 @@
 
 <img src="https://media.giphy.com/media/iYssqHbOcvL20/giphy.gif">
 
-<h3> <%= $game.player2.name %> health: <%= $game.player2.health %>
+<h3> <%= $game.victim.name %> health: <%= $game.victim.health %>
