--- a/views/confirmation.erb
+++ b/views/confirmation.erb
@@ -1,5 +1,9 @@
-<h2>attack confirmed</h2>
-
 <img src="https://media.giphy.com/media/iYssqHbOcvL20/giphy.gif">
 
+<h2>attack confirmed</h2>
+
 <h3> <%= $game.victim.name %> health: <%= $game.victim.health %>
+
+<form action="/next_turn">
+  <button type="submit" value="next turn">Next turn</button>
+</form>
